[tool.poetry]
name = "data-and-analysis"
version = "0.1.0"
description = ""
authors = ["Konsta Kallio-Mannila <konsta.kalliomannila@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^2.1.1"
scikit-learn = "^1.3.1"
nltk = "^3.8.1"
seaborn = "^0.13.0"
vadersentiment = "^3.3.2"
scipy = ">=1.7.3, <1.8.0"
bayesian-bootstrap = "^1.1.0"
spacy = "^3.7.2"
pymc3 = "3.10"
torch = "^2.1.0"
transformers = "^4.35.0"
statsmodels = "^0.14.0"
afinn = "^0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
